# todo_list

./: .gitignore  README.md  docker-compose.yml
django/: Dockerfile  pyproject.toml
django/src/tasks/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
django/src/tasks/migrations/: 0001_initial.py  0002_todouser_tg_id_alter_todouser_tg_username.py
django/src/todo_list/: celery.py  env_settings.py  settings.py  urls.py
nginx-templates/: default.conf.template
telegram_bot/: Dockerfile  pyproject.toml
telegram_bot/src/: bot.py  remainder.py
