[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["mulchus <mulch@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0"
aiogram_dialog = "^2.3"
httpx = "^0.28"
quart = "^0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
